# package_myce_drop_wd

./: .gitignore  CLAUDE.md  MANIFEST.in  README.rst  pyproject.toml  setup.cfg
docs/: product-guide.md  settings-guide.md
drop_wd/: README.txt  apps.py  forms.py  models.py  serializers.py  signals.py  views.py
drop_wd/migrations/: 0001_initial.py  0002_alter_dropwdrequest_counselor_signature_and_more.py  0003_dropwdrequest_notes_alter_dropwdrequest_status.py  0004_remove_dropwdrequest_instructor_note.py  0005_alter_dropwdrequest_status.py
drop_wd/reports/: drop_wd_requests.py
drop_wd/settings/: drop_wd_email.py
drop_wd/templates/drop_wd/ce/: request.html  requests.html  requests_table.html  summary.html
drop_wd/templates/drop_wd/highschool_admin/: requests.html  start_request.html
drop_wd/templates/drop_wd/instructor/: request.html  requests.html  start_request.html
drop_wd/templates/drop_wd/student/: parent-sign-consent.html  request.html  start_request.html
drop_wd/urls/: ce.py  highschool_admin.py  instructor.py  student.py
