[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "myce_drop_wd"
version = "0.0.1"
authors = [
  { name="Avinash Kadaji", email="avi@canusia.com" },
]
description = "MYCE - Drop/WD Requests"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Canusia/myce_drop_wd"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"